# OpenHermes

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
examples/: memory_demo.rs
openhermes-cli/: Cargo.toml
openhermes-cli/src/: main.rs
openhermes-config/: Cargo.toml
openhermes-config/src/: config.rs  env.rs  lib.rs  types.rs
openhermes-constants/: Cargo.toml
openhermes-constants/src/: lib.rs
openhermes-core/: Cargo.toml
openhermes-core/src/: agent.rs  anthropic_adapter.rs  auxiliary_client.rs  budget.rs  context_compressor.rs  context_references.rs  credential_pool.rs  error_classifier.rs  lib.rs  model_metadata.rs  prompt_builder.rs  prompt_caching.rs  rate_limit_tracker.rs  redact.rs  smart_routing.rs  title_generator.rs  types.rs  usage_pricing.rs
openhermes-cron/: Cargo.toml
openhermes-cron/src/: jobs.rs  lib.rs  scheduler.rs
openhermes-gateway/: Cargo.toml
openhermes-gateway/src/: discord.rs  lib.rs  platform.rs  router.rs  session.rs  telegram.rs
openhermes-mcp/: Cargo.toml
openhermes-mcp/src/: client.rs  integration.rs  lib.rs  tool_wrapper.rs  types.rs
openhermes-memory/: Cargo.toml
openhermes-memory/src/: builtin_provider.rs  database.rs  fts5.rs  lib.rs  memory_manager.rs
openhermes-skills/: Cargo.toml
openhermes-skills/src/: lib.rs  skill_manager.rs
openhermes-tools/: Cargo.toml
openhermes-tools/src/: approval_tool.rs  browser_tool.rs  checkpoint_tool.rs  clarify_tool.rs  code_execution_tool.rs  cronjob_tool.rs  delegate_tool.rs  dependency_installer.rs  file_tools.rs  file_tools_enhanced.rs  image_generation_tool.rs  lib.rs  llm_client.rs  memory_tools.rs  mixture_of_agents_tool.rs  registry.rs  send_message_tool.rs  session_search_tool.rs  skill_loader.rs  skill_sandbox.rs  skills_hub_client.rs  skills_manager.rs  skills_tools.rs  terminal_tool.rs  todo_tool.rs  tts_tool.rs  vision_tool.rs  web_tools.rs
