[workspace]
members = [
    "openhermes-core",      # Core Agent loop
    "openhermes-tools",     # Tool system
    "openhermes-cli",       # CLI interface
    "openhermes-gateway",   # Messaging platform gateway
    "openhermes-memory",    # Memory system (SQLite + FTS5)
    "openhermes-skills",    # Skills system
    "openhermes-cron",      # Cron scheduler
    "openhermes-config",    # Configuration management
    "openhermes-constants", # Shared constants
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Nous Research"]
license = "MIT"
description = "The self-improving AI agent — creates skills from experience, improves them during use, and runs anywhere"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# LLM SDK (OpenAI compatible)
async-openai = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
reedline = "0.38"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
dirs = "5"
dotenvy = "0.15"
