[package]
name = "openhermes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core Agent loop for OpenHermes Agent"

[dependencies]
openhermes-constants = { path = "../openhermes-constants" }
openhermes-config = { path = "../openhermes-config" }
openhermes-tools = { path = "../openhermes-tools" }
openhermes-memory = { path = "../openhermes-memory" }
openhermes-skills = { path = "../openhermes-skills" }

tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
async-openai.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
regex.workspace = true
once_cell.workspace = true
rust_decimal.workspace = true
rand.workspace = true
dirs.workspace = true
