[package]
name = "openhermes-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Messaging platform gateway for OpenHermes Agent"

[dependencies]
openhermes-constants = { path = "../openhermes-constants" }
openhermes-core = { path = "../openhermes-core" }

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
