[package]
name = "openhermes-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) client for OpenHermes Agent"

[dependencies]
openhermes-tools = { path = "../openhermes-tools" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
once_cell.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
url = "2.5"
futures = "0.3"
