[package]
name = "openhermes-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory system for OpenHermes Agent"

[dependencies]
openhermes-constants = { path = "../openhermes-constants" }

anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
