[package]
name = "openhermes-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Memory system for OpenHermes Agent"

[dependencies]
openhermes-constants = { path = "../openhermes-constants" }
openhermes-config = { path = "../openhermes-config" }

anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
async-trait.workspace = true
dashmap.workspace = true
once_cell.workspace = true
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
